--- a/gui.glade
+++ b/gui.glade
@@ -52,8 +52,6 @@
       <column type="gchararray"/>
       <!-- column-name pixbuf -->
       <column type="GdkPixbuf"/>
-      <!-- column-name rom_id -->
-      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkWindow" id="window">
@@ -68,56 +66,165 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <child>
-          <object class="GtkScrolledWindow" id="scrolledwindow_pokedex">
+          <object class="GtkHBox" id="hbox_pokedex">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <child>
-              <object class="GtkTreeView" id="treeview_pokedex">
+              <object class="GtkFrame" id="frame_pokedex">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="model">liststore_pokedex</property>
+                <property name="label_xalign">0</property>
                 <child>
-                  <object class="GtkTreeViewColumn" id="treeviewcolumn_id">
-                    <property name="title">#</property>
+                  <object class="GtkScrolledWindow" id="scrolledwindow_pokedex">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <object class="GtkCellRendererText" id="cellrenderertext_id"/>
-                      <attributes>
-                        <attribute name="text">0</attribute>
-                      </attributes>
+                      <object class="GtkTreeView" id="treeview_pokedex">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="model">liststore_pokedex</property>
+                        <property name="headers_clickable">False</property>
+                        <property name="search_column">0</property>
+                        <signal name="cursor_changed" handler="on_treeview_pokedex_cursor_changed"/>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn_id">
+                            <property name="title">#</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext_id"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn_pkmn">
+                            <property name="title">Pok&#xE9;mon</property>
+                            <child>
+                              <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf"/>
+                              <attributes>
+                                <attribute name="pixbuf">2</attribute>
+                              </attributes>
+                            </child>
+                            <child>
+                              <object class="GtkCellRendererText" id="cellrenderertext_name"/>
+                              <attributes>
+                                <attribute name="markup">1</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
                     </child>
                   </object>
                 </child>
+                <child type="label_item">
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkFrame" id="frame_pkmn">
+                <property name="visible">True</property>
+                <property name="label_xalign">0</property>
+                <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkTreeViewColumn" id="treeviewcolumn_pkmn">
-                    <property name="title">Pok&#xE9;mon</property>
+                  <object class="GtkAlignment" id="alignment_frame_pkmn">
+                    <property name="visible">True</property>
+                    <property name="left_padding">12</property>
                     <child>
-                      <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf"/>
-                      <attributes>
-                        <attribute name="pixbuf">2</attribute>
-                      </attributes>
-                    </child>
-                    <child>
-                      <object class="GtkCellRendererText" id="cellrenderertext_name"/>
-                      <attributes>
-                        <attribute name="markup">1</attribute>
-                      </attributes>
+                      <object class="GtkVBox" id="vbox_pkmn_main">
+                        <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">5</property>
+                        <child>
+                          <object class="GtkHBox" id="hbox_image_and_info_small">
+                            <property name="visible">True</property>
+                            <property name="spacing">5</property>
+                            <child>
+                              <object class="GtkFrame" id="frame_image_pkmn">
+                                <property name="visible">True</property>
+                                <property name="label_xalign">0</property>
+                                <property name="shadow_type">in</property>
+                                <child>
+                                  <object class="GtkImage" id="image_pkmn">
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-missing-image</property>
+                                  </object>
+                                </child>
+                                <child type="label_item">
+                                  <placeholder/>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkScrolledWindow" id="scrolledwindow_pkmn_info_small">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="hscrollbar_policy">automatic</property>
+                                <property name="vscrollbar_policy">automatic</property>
+                                <child>
+                                  <object class="GtkTextView" id="textview_pkmn_info_small">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="editable">False</property>
+                                    <property name="cursor_visible">False</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkScrolledWindow" id="scrolledwindow_pkmn_info">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">automatic</property>
+                            <property name="vscrollbar_policy">automatic</property>
+                            <child>
+                              <object class="GtkTextView" id="textview_pkmn_info">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="editable">False</property>
+                                <property name="cursor_visible">False</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
                     </child>
                   </object>
                 </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="treeviewcolumn_romid">
-                    <property name="title">ROM ID</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="cellrenderertext_romid"/>
-                      <attributes>
-                        <attribute name="text">3</attribute>
-                      </attributes>
-                    </child>
+                <child type="label">
+                  <object class="GtkLabel" id="label_pkmn">
+                    <property name="visible">True</property>
+                    <attributes>
+                      <attribute name="scale" value="2.500000"/>
+                    </attributes>
                   </object>
                 </child>
               </object>
+              <packing>
+                <property name="position">1</property>
+              </packing>
             </child>
           </object>
         </child>
