--- a/gui.glade
+++ b/gui.glade
@@ -295,6 +295,7 @@
                         <property name="headers_clickable">False</property>
                         <property name="search_column">0</property>
                         <signal name="cursor_changed" handler="on_treeview_gameinfo_cursor_changed"/>
+                        <signal name="row_activated" handler="on_treeview_gameinfo_row_activated"/>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn_gameinfo">
                             <property name="title">column</property>
