--- a/gui.glade
+++ b/gui.glade
@@ -265,6 +265,9 @@
                     <child>
                       <object class="GtkLabel" id="label_mapinfo">
                         <property name="visible">True</property>
+                        <property name="xalign">0</property>
+                        <property name="xpad">5</property>
+                        <property name="ypad">5</property>
                       </object>
                     </child>
                     <child type="label">
