Add some margin in pokémon text info (small one)

--- a/gui.glade
+++ b/gui.glade
@@ -176,6 +176,8 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="editable">False</property>
+                                    <property name="left_margin">5</property>
+                                    <property name="right_margin">5</property>
                                     <property name="cursor_visible">False</property>
                                   </object>
                                 </child>
