--- a/gui.glade
+++ b/gui.glade
@@ -259,6 +259,17 @@
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">10</property>
                                 <child>
+                                  <object class="GtkLabel" id="label_pkmn_types">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="ypad">5</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
                                   <object class="GtkAlignment" id="alignment_stats">
                                     <property name="visible">True</property>
                                     <property name="yalign">0</property>
@@ -380,7 +391,7 @@
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
-                                    <property name="position">0</property>
+                                    <property name="position">1</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -422,7 +433,7 @@
                                     </child>
                                   </object>
                                   <packing>
-                                    <property name="position">1</property>
+                                    <property name="position">2</property>
                                   </packing>
                                 </child>
                               </object>
