--- a/gui.glade
+++ b/gui.glade
@@ -401,7 +401,7 @@
                                             <child>
                                               <object class="GtkCellRendererText" id="cellrenderertext_level"/>
                                               <attributes>
-                                                <attribute name="text">0</attribute>
+                                                <attribute name="markup">0</attribute>
                                               </attributes>
                                             </child>
                                           </object>
