--- a/gui.glade
+++ b/gui.glade
@@ -62,7 +62,19 @@
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkListStore" id="liststore_wild_pkmn">
+  <object class="GtkListStore" id="liststore_grass_wild_pkmn">
+    <columns>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+      <!-- column-name level -->
+      <column type="gint"/>
+      <!-- column-name rom_id -->
+      <column type="gint"/>
+      <!-- column-name pixbuf -->
+      <column type="GdkPixbuf"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="liststore_water_wild_pkmn">
     <columns>
       <!-- column-name name -->
       <column type="gchararray"/>
@@ -633,48 +645,149 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkScrolledWindow" id="scrolledwindow_wild_pkmn">
+                  <object class="GtkHBox" id="hbox_wild_pkmn">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">automatic</property>
-                    <property name="vscrollbar_policy">automatic</property>
                     <child>
-                      <object class="GtkTreeView" id="treeview_wild_pkmn">
+                      <object class="GtkFrame" id="frame_grass_wild_pkmn">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="model">liststore_wild_pkmn</property>
-                        <property name="headers_clickable">False</property>
-                        <property name="search_column">0</property>
-                        <signal name="row_activated" handler="on_treeview_wild_pkmn_row_activated"/>
+                        <property name="label_xalign">0</property>
+                        <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn_wild_pkmn_name">
-                            <property name="title">Pok&#xE9;mon</property>
+                          <object class="GtkAlignment" id="alignment_grass_wild_pkmn">
+                            <property name="visible">True</property>
+                            <property name="left_padding">12</property>
                             <child>
-                              <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf_wild_pkmn_pixbuf"/>
-                              <attributes>
-                                <attribute name="pixbuf">3</attribute>
-                              </attributes>
-                            </child>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext_wild_pkmn_name"/>
-                              <attributes>
-                                <attribute name="markup">0</attribute>
-                              </attributes>
+                              <object class="GtkScrolledWindow" id="scrolledwindow_grass_wild_pkmn">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="hscrollbar_policy">automatic</property>
+                                <property name="vscrollbar_policy">automatic</property>
+                                <property name="shadow_type">etched-in</property>
+                                <child>
+                                  <object class="GtkTreeView" id="treeview_grass_wild_pkmn">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="model">liststore_grass_wild_pkmn</property>
+                                    <property name="headers_clickable">False</property>
+                                    <property name="search_column">0</property>
+                                    <signal name="row_activated" handler="on_treeview_wild_pkmn_row_activated"/>
+                                    <child>
+                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_grass_wild_pkmn_name">
+                                        <property name="title">Pok&#xE9;mon</property>
+                                        <child>
+                                          <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf_grass_wild_pkmn_pixbuf"/>
+                                          <attributes>
+                                            <attribute name="pixbuf">3</attribute>
+                                          </attributes>
+                                        </child>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext_grass_wild_pkmn_name"/>
+                                          <attributes>
+                                            <attribute name="markup">0</attribute>
+                                          </attributes>
+                                        </child>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_grass_wild_pkmn_level">
+                                        <property name="title">Level</property>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext_grass_wild_pkmn_level"/>
+                                          <attributes>
+                                            <attribute name="text">1</attribute>
+                                          </attributes>
+                                        </child>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
                             </child>
                           </object>
                         </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="treeviewcolumn_wild_pkmn_level">
-                            <property name="title">Level</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext_wild_pkmn_level"/>
-                              <attributes>
-                                <attribute name="text">1</attribute>
-                              </attributes>
-                            </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="label_grass_wild_pkmn">
+                            <property name="visible">True</property>
+                            <property name="ypad">5</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Grass Pok&#xE9;mon&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
                           </object>
                         </child>
                       </object>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkFrame" id="frame_water_wild_pkmn">
+                        <property name="visible">True</property>
+                        <property name="label_xalign">0</property>
+                        <property name="shadow_type">none</property>
+                        <child>
+                          <object class="GtkAlignment" id="alignment_water_wild_pkmn">
+                            <property name="visible">True</property>
+                            <property name="left_padding">12</property>
+                            <child>
+                              <object class="GtkScrolledWindow" id="scrolledwindow_water_wild_pkmn">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="hscrollbar_policy">automatic</property>
+                                <property name="vscrollbar_policy">automatic</property>
+                                <property name="shadow_type">etched-in</property>
+                                <child>
+                                  <object class="GtkTreeView" id="treeview_water_wild_pkmn">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="model">liststore_water_wild_pkmn</property>
+                                    <property name="headers_clickable">False</property>
+                                    <property name="search_column">0</property>
+                                    <signal name="row_activated" handler="on_treeview_wild_pkmn_row_activated"/>
+                                    <child>
+                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_water_wild_pkmn_name">
+                                        <property name="title">Pok&#xE9;mon</property>
+                                        <child>
+                                          <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf_water_wild_pkmn_pixbuf"/>
+                                          <attributes>
+                                            <attribute name="pixbuf">3</attribute>
+                                          </attributes>
+                                        </child>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext_water_wild_pkmn_name"/>
+                                          <attributes>
+                                            <attribute name="markup">0</attribute>
+                                          </attributes>
+                                        </child>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_water_wild_pkmn_level">
+                                        <property name="title">Level</property>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext_water_wild_pkmn_level"/>
+                                          <attributes>
+                                            <attribute name="text">1</attribute>
+                                          </attributes>
+                                        </child>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="label_water_wild_pkmn">
+                            <property name="visible">True</property>
+                            <property name="ypad">5</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Water Pok&#xE9;mon&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                   </object>
                   <packing>
