--- a/gui.glade
+++ b/gui.glade
@@ -190,6 +190,26 @@
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkFrame" id="frame_image_pkmn_back">
+                                <property name="visible">True</property>
+                                <property name="label_xalign">0</property>
+                                <property name="shadow_type">in</property>
+                                <child>
+                                  <object class="GtkImage" id="image_pkmn_back">
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-missing-image</property>
+                                  </object>
+                                </child>
+                                <child type="label_item">
+                                  <placeholder/>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkScrolledWindow" id="scrolledwindow_pkmn_info_small">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
@@ -208,7 +228,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                             <child>
@@ -246,7 +266,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="position">2</property>
+                                <property name="position">3</property>
                               </packing>
                             </child>
                           </object>
