--- a/gui.glade
+++ b/gui.glade
@@ -370,6 +370,16 @@
                                             <property name="position">5</property>
                                           </packing>
                                         </child>
+                                        <child>
+                                          <object class="GtkLabel" id="label_stat_CAP">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">1</property>
+                                            <property name="label" translatable="yes">Capture rate</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">6</property>
+                                          </packing>
+                                        </child>
                                       </object>
                                       <packing>
                                         <property name="position">0</property>
@@ -426,6 +436,14 @@
                                           <packing>
                                             <property name="padding">10</property>
                                             <property name="position">5</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkProgressBar" id="progressbar_stat_CAP">
+                                            <property name="visible">True</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">6</property>
                                           </packing>
                                         </child>
                                       </object>
