Remove temporary header Pokémon informations

--- a/gui.glade
+++ b/gui.glade
@@ -520,6 +520,7 @@
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">3</property>
                                   </packing>
                                 </child>
