--- a/gui.glade
+++ b/gui.glade
@@ -219,7 +219,7 @@
                               <object class="GtkScrolledWindow" id="scrolledwindow_pkmn_info_small">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="hscrollbar_policy">automatic</property>
+                                <property name="hscrollbar_policy">never</property>
                                 <property name="vscrollbar_policy">automatic</property>
                                 <property name="shadow_type">etched-in</property>
                                 <child>
@@ -234,6 +234,7 @@
                                 </child>
                               </object>
                               <packing>
+                                <property name="expand">False</property>
                                 <property name="position">2</property>
                               </packing>
                             </child>
