--- a/gui.glade
+++ b/gui.glade
@@ -668,7 +668,6 @@
                 </child>
                 <child>
                   <object class="GtkFrame" id="frame_map">
-                    <property name="visible">True</property>
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">in</property>
                     <child>
@@ -770,6 +769,7 @@
                                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_STRUCTURE_MASK</property>
                                 <signal name="motion_notify_event" handler="on_eventbox_image_map_motion_notify_event"/>
                                 <signal name="button_press_event" handler="on_eventbox_image_map_button_press_event"/>
+                                <signal name="leave_notify_event" handler="on_eventbox_image_map_leave_notify_event"/>
                                 <child>
                                   <object class="GtkImage" id="image_map">
                                     <property name="visible">True</property>
