--- a/gui.glade
+++ b/gui.glade
@@ -1248,7 +1248,7 @@
                 <child>
                   <object class="GtkCellRendererText" id="cellrenderertext_pkmn_name"/>
                   <attributes>
-                    <attribute name="text">0</attribute>
+                    <attribute name="markup">0</attribute>
                   </attributes>
                 </child>
                 <child>
