--- a/gui.glade
+++ b/gui.glade
@@ -73,10 +73,12 @@
   </object>
   <object class="GtkListStore" id="liststore_trainer_team">
     <columns>
-      <!-- column-name name -->
-      <column type="gchararray"/>
+      <!-- column-name pkmn_id -->
+      <column type="gint"/>
       <!-- column-name pic -->
       <column type="GdkPixbuf"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
       <!-- column-name level -->
       <column type="gchararray"/>
     </columns>
@@ -1245,10 +1247,11 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="model">liststore_trainer_team</property>
+                <signal name="item-activated" handler="on_iconview_trainer_team_activated" swapped="no"/>
                 <child>
                   <object class="GtkCellRendererText" id="cellrenderertext_pkmn_name"/>
                   <attributes>
-                    <attribute name="markup">0</attribute>
+                    <attribute name="markup">2</attribute>
                   </attributes>
                 </child>
                 <child>
@@ -1260,7 +1263,7 @@
                 <child>
                   <object class="GtkCellRendererText" id="cellrenderertext_pkmn_lvl"/>
                   <attributes>
-                    <attribute name="text">2</attribute>
+                    <attribute name="text">3</attribute>
                   </attributes>
                 </child>
               </object>
